force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fresher Developer</fullName>
            </value>
            <value>
                <fullName>Mid Level Developer</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>Experienced Developer</fullName>
            </value>
            <value>
                <fullName>SK-11</fullName>
            </value>
            <value>
                <fullName>SK-22</fullName>
            </value>
            <value>
                <fullName>SK-33</fullName>
            </value>
            <value>
                <fullName>MK-11</fullName>
            </value>
            <value>
                <fullName>MK-22</fullName>
            </value>
            <value>
                <fullName>MK-33</fullName>
            </value>
            <value>
                <fullName>IK-11</fullName>
            </value>
            <value>
                <fullName>IK-22</fullName>
            </value>
            <value>
                <fullName>IK-33</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>