force-app/main/default/objects/Position__c/fields/Job_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Job_Responsibilities__c</fullName>
    <label>Job Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>