force-app/main/default/objects/Position__c/fields/Position_Number__c.field-meta.xml
<CustomField>
    <fullName>Position_Number__c</fullName>
    <label>Position Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>