force-app/main/default/objects/Position__c/recordTypes/IT_Position_Layout.recordType-meta.xml
<RecordType>
    <fullName>IT_Position_Layout</fullName>
    <active>true</active>
    <label>IT Position Layout</label>
</RecordType>