force-app/main/default/objects/Position__c/recordTypes/Non_IT_Position_Layout.recordType-meta.xml
<RecordType>
    <fullName>Non_IT_Position_Layout</fullName>
    <active>true</active>
    <label>Non IT Position Layout</label>
</RecordType>