force-app/main/default/objects/Position__c/validationRules/Closed_Date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_rule</fullName>
    <active>true</active>
    <description>If status of the position is closed and closed date is not filled then this should throw an error</description>
    <errorConditionFormula>ISPICKVAL( Status__c, &quot;Closed&quot;) 

 &amp;&amp; 

 ISBLANK( Close_Date__c )</errorConditionFormula>
    <errorMessage>If status of the position is closed, please enter a closed date</errorMessage>
</ValidationRule>