force-app/main/default/objects/Position__c/validationRules/Min_Pay_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_Role</fullName>
    <active>true</active>
    <description>Prevent the User from creating the record if the pay is less than 20000</description>
    <errorConditionFormula>Minimum_Pay__c  &lt; 20000</errorConditionFormula>
    <errorDisplayField>Minimum_Pay__c</errorDisplayField>
    <errorMessage>Please enter the value greater than or equal to 20000</errorMessage>
</ValidationRule>