force-app/main/default/objects/Position__c/validationRules/Open_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Date_Rule</fullName>
    <active>true</active>
    <description>Open date can be current date or any date in future</description>
    <errorConditionFormula>Open_Date__c   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Open_Date__c</errorDisplayField>
    <errorMessage>Open Date cannot be in the past.</errorMessage>
</ValidationRule>